--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "5.0.5",
   "license": "MIT",
   "scripts": {
+    "start": "node app.js",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -34,6 +35,7 @@
     "core-js": "2.4.x",
     "del": "3.0.x",
     "easy-pie-chart": "2.1.x",
+    "express": "^4.16.2",
     "font-awesome": "4.7.x",
     "gulp": "^3.9.1",
     "gulp-rename": "1.2.x",
